--- a/style.css
+++ b/style.css
@@ -1,3 +1,5 @@
+@import url('https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500;700&display=swap');
+
 *{
    margin: 0;
    padding: 0;
@@ -5,6 +7,11 @@
    font-family: 'Poppins', sans-serif;
 }
 
+html,body{
+scroll-behavior: smooth;
+}
+
+/* Header */
 section{
    position: relative;
    width: 100%;
@@ -103,7 +110,9 @@ header > ul.navegation.active{
    background: #ccc;
    z-index: 10;
 }
+/* End Header */
 
+/* Home */
 .content{
    position: relative;
    width: 100%;
@@ -208,10 +217,18 @@ header > ul.navegation.active{
    background: #531B7C;
    clip-path: circle(600px at right 800px);
 }
+/* End Home */
 
+/* Footer */
 #footer{
    background-color: #24262b;
    padding: 70px 0;
+   line-height: 1.5;
+}
+
+.container{
+   max-width: 1170px;
+   margin: auto;
 }
 
 .row{
@@ -221,18 +238,77 @@ header > ul.navegation.active{
 
 .footer-col{
    width: 25%;
+   padding: 0 15px;
 }
 
-.container{
-   max-width: 1170px;
+.footer-col > h4{
+   font-size: 18px;
+   color: #fff;
+   text-transform: capitalize;
+   margin-bottom: 35px;
+   font-weight: 500;
+   position: relative;
+}
+
+.footer-col > h4::before{
+   content: '';
+   position: absolute;
+   left: 0;
+   bottom: -10px;
    background-color: #fde50e;
-   margin: auto;
+   height: 2px;
+   width: 53px;
+}
+
+.footer-col > p{
+   color: #fff;
+   max-width: 200px;
 }
 
 ul{
    list-style: none;
 }
 
+.footer-col > ul > li:not(:last-child){
+   margin-bottom: 10px;
+}
+
+.footer-col > ul > li > a{
+   font-size: 16px;
+   text-transform: capitalize;
+   color: #fff;
+   text-decoration: none;
+   font-weight: 300;
+   color: #bbb;
+   display: block;
+   transition: all 0.3s ease;
+}
+
+.footer-col > ul > li > a:hover{
+   color: #fde50e;
+   padding-left: 8px;
+}
+
+.footer-col .social-links a{
+   display: inline-block;
+   height: 40px;
+   width: 40px;
+   background-color: rgba(255, 255, 255, 0.2);
+   margin: 0 10px 10px 0;
+   text-align: center;
+   line-height: 40px;
+   border-radius: 50%;
+   color: #fff;
+   transition: all 0.5s ease;
+}
+
+.footer-col .social-links a:hover{
+   color: #24262b;
+   background-color: #fde50e;
+}
+/* End Footer */
+
+/* Responsive Home */
 @media (max-width: 991px){
    header{
       padding: 20px;
@@ -331,3 +407,13 @@ ul{
       width: 50px;
    }
 }
+/* End Responsive Home */
+
+/* Responsive Footer */
+@media(max-width: 767px){
+   .footer-col{
+      width: 50%;
+      margin-bottom: 30px;
+   }
+}
+/* End Responsive Footer */
