--- a/style.css
+++ b/style.css
@@ -19,6 +19,20 @@ scroll-behavior: smooth;
    justify-content: center;
 }
 
+.section-title{
+   font-size: 4rem;
+   font-weight: 300;
+   color: black;
+   margin-bottom: 10px;
+   text-transform: uppercase;
+   letter-spacing: 0.2rem;
+   text-align: center;
+}
+
+.section-title span{
+   color: #fde50e;
+}
+
 /* Header */
 section{
    position: relative;
@@ -32,12 +46,12 @@ section{
 }
 
 header{
-   box-shadow: 0 .5rem 1rem rgba(0, 0, 0, .1);
+   box-shadow: 0 0.5rem 1rem rgba(0, 0, 0, .07);
    position: absolute;
    top: 0;
    left: 0;
    width: 100%;
-   padding: 5px 100px;
+   padding: 1px 100px;
    display: flex;
    justify-content: space-between;
    align-items: center;
@@ -45,14 +59,14 @@ header{
 
 header .logo{
    background-color: rgba(51, 51, 51, 0.068);
-   border-radius: 25%;
+   border-radius: 22%;
    position: relative;
-   max-width: 80px;
+   max-width: 65px;
 }
 
 header a{
-   margin-top: 7px;
-   margin-bottom: 7px;
+   margin-top: 12px;
+   margin-bottom: 8px;
 }
 
 header ul{
@@ -119,12 +133,11 @@ header ul.navegation.active{
    z-index: 10;
 }
 
-.drop-ul{
+.drop-ul {
    background-color: #fff;
    position: absolute;
    display: none;
    grid-template-columns: repeat(3, 1fr);
-   border: 1px solid #24262b;
    z-index: 500;
 }
 
@@ -133,7 +146,15 @@ header ul.navegation.active{
 }
 
 .drop-ul a{
-   background-color: black;
+   border: 1px solid #333;
+   border-radius: 0;
+   margin: 0;
+   width: 170px;
+   transition: 0.1s ease;
+}
+
+.drop-ul a:hover{
+   background-color: rgba(204, 204, 204, 0.432);
 }
 /* End Header */
 
@@ -246,6 +267,48 @@ header ul.navegation.active{
 
 /* Main */
 
+.main{
+   width: 100%;
+}
+
+.bloco{
+   width: 100%;
+   margin-top: 150px;
+}
+
+.bloco h1{
+   word-wrap: break-word;
+}
+
+.object{
+   display: flex;
+   flex-wrap: wrap;
+   margin-top: 70px;
+}
+
+.object .box{
+   height: 290px;
+   width: 210px;
+   margin: 25px 10px;
+   background-color: #ccc;
+   text-align: center;
+   border-radius: 10px;
+   transition: 0.22s ease;
+}
+
+.object .box:hover{
+   transform: translateY(-3px);
+   box-shadow: 0 0.5rem 1rem rgba(0, 0, 0, .3);
+}
+
+.object .box img{
+   margin-top: 15px;
+   width: 120px;
+}
+
+.object .box h4{
+   margin-top: 20px;
+}
 /* End Main */
 
 /*About us*/
@@ -301,20 +364,6 @@ header ul.navegation.active{
 
 /* Contact */
 
-.section-title{
-   font-size: 4rem;
-   font-weight: 300;
-   color: black;
-   margin-bottom: 10px;
-   text-transform: uppercase;
-   letter-spacing: 0.2rem;
-   text-align: center;
-}
-
-.section-title span{
-   color: #fde50e;
-}
-
 #contact .contact{
    flex-direction: column;
    max-width: 1200px;
@@ -332,7 +381,7 @@ header ul.navegation.active{
 #contact .contact-item{
    text-align: center;
    border-radius: 10px;
-   padding: 15px 75px;
+   padding: 15px 72px;
    margin: 30px;
    display: flex;
    justify-content: center;
@@ -475,7 +524,7 @@ ul{
 /* Responsive Home */
 @media (max-width: 991px){
    header{
-      padding: 20px;
+      padding: 5px 20px;
    }
    
    header .logo{
@@ -570,8 +619,12 @@ ul{
       right: 0;
       width: 50px;
    }
+   /* End Responsive Home */
+
+   /* Responsive Main*/
+
+   /* End Responsive Main*/
 }
-/* End Responsive Home */
 
 /* Responsive About us */
 @media(max-width: 767px){
