--- a/style.css
+++ b/style.css
@@ -154,7 +154,7 @@ header ul.navegation.active{
 }
 
 .drop-ul a:hover{
-   background-color: rgba(204, 204, 204, 0.432);
+   background-color: rgba(175, 175, 175, 0.644);
 }
 /* End Header */
 
@@ -289,11 +289,12 @@ header ul.navegation.active{
 .object .box{
    height: 290px;
    width: 210px;
-   margin: 25px 10px;
-   background-color: #ccc;
+   margin: 20px 10px;
+   background-color: rgb(243, 243, 243);
    text-align: center;
-   border-radius: 10px;
-   transition: 0.22s ease;
+   border-radius: 11px;
+   transition: 0.2s ease;
+   border: 1.5px solid #fde50e;
 }
 
 .object .box:hover{
@@ -619,10 +620,19 @@ ul{
       right: 0;
       width: 50px;
    }
+
+   .drop-ul{
+      display: grid;
+      grid-template-columns: repeat(2, 1fr);
+
+   }
    /* End Responsive Home */
 
    /* Responsive Main*/
-
+   .object .box{
+      width: 200px;
+      margin: 15px 7px;
+   }
    /* End Responsive Main*/
 }
 
