--- a/style.css
+++ b/style.css
@@ -100,7 +100,7 @@ header ul li a:hover{
    width: 30px;
    height: 30px;
    cursor: pointer;
-   background: url(../assets/menu.png);
+   background: url(./assets/menu.png);
    background-size: 30px;
    background-position: center;
    background-repeat: no-repeat;
