ajustes de responsividade

--- a/style.css
+++ b/style.css
@@ -696,6 +696,10 @@ ul{
       height: 250px;
       margin: 15px 2px;
    }
+
+   .object .box h4{
+      margin-top: 35px;
+   }
    /* End Responsive Main*/
 
 /* Responsive Contact*/
