--- a/style.css
+++ b/style.css
@@ -340,7 +340,7 @@ header ul.navegation.active{
    text-align: center;
    max-width: 970px;
    margin: 0 auto;
-   padding: 100px 20px;
+   padding: 10px 20px;
    z-index: 1;
 }
 
@@ -396,7 +396,8 @@ header ul.navegation.active{
 }
 
 #contact .contact-items{
-   display: flex;
+   display: grid;
+   grid-template-columns: repeat(3, 1fr);
    flex-wrap: wrap;
    justify-content: space-around;
    margin-top: 30px;
@@ -692,6 +693,14 @@ ul{
 /* End Responsive About us*/
 
 /* Responsive Main*/
+   .bloco{
+      margin-top: 100px;
+   }
+
+   .object{
+      margin-top: 30px;
+   }
+
    .object .box{
       width: 145px;
       height: 245px;
