--- a/style.css
+++ b/style.css
@@ -276,7 +276,7 @@ header ul.navegation.active{
    left: 0;
    width: 100%;
    height: 100%;
-   background: #531B7C;
+   background: #0a134e;
    clip-path: circle(600px at right 800px);
 }
 /* End Home */
